# ra2a

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml  publish.yml  rust-publish.yml  rust.yml
ra2a/: Cargo.toml  build.rs
ra2a-ext/: Cargo.toml
ra2a-ext/src/: activator.rs  lib.rs  propagator.rs  util.rs
ra2a/examples/: client.rs  client_example.rs  server.rs  server_example.rs
ra2a/src/: crypto.rs  error.rs  jsonrpc.rs  lib.rs
ra2a/src/client/: auth.rs  card_resolver.rs  client_task_manager.rs  config.rs  factory.rs  grpc.rs  http.rs  intercepted_client.rs  interceptor.rs  jsonrpc.rs  middleware.rs  mod.rs  rest.rs  sse.rs  streaming.rs  transport.rs
ra2a/src/client/transports/: base.rs  jsonrpc.rs  mod.rs  rest.rs
ra2a/src/grpc/: convert.rs  mod.rs  server.rs  transport.rs
ra2a/src/server/: app.rs  call_context.rs  context.rs  default_handler.rs  event.rs  events.rs  executor.rs  handler.rs  http.rs  id_generator.rs  intercepted_handler.rs  middleware.rs  mod.rs  push.rs  push_notification.rs  request_handler.rs  rest.rs  rest_handler.rs  result_aggregator.rs  sse.rs  streaming_handler.rs  task_manager.rs  task_store.rs  task_updater.rs
ra2a/src/server/handler/: default.rs  intercepted.rs  mod.rs
ra2a/src/types/: agent.rs  artifact.rs  event.rs  extensions.rs  id.rs  jsonrpc.rs  message.rs  mod.rs  oauth.rs  params.rs  part.rs  push.rs  request.rs  response.rs  security.rs  task.rs
xa2a/: Cargo.toml
xa2a/src/: error.rs  http_helpers.rs  lib.rs  task_helpers.rs
xa2a/src/client/: auth.rs  mod.rs  sse.rs  streaming.rs
xa2a/src/server/: context_builder.rs  events.rs  mod.rs  push_notification.rs  rest_handler.rs  sse.rs  streaming_handler.rs
