[workspace]
members = ["xa2a"]
default-members = ["xa2a"]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyroth/xa2a"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http-body = "1.0"
http-body-util = "0.1"
mockito = "1.6"
opentelemetry = "0.31"
pin-project-lite = "0.2"
pretty_assertions = "1.4"
prost = "0.14"
reqwest = { version = "0.13", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "json"] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-test = "0.4"
tonic = "0.14"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "warn"
# missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# missing_errors_doc = "allow"
# missing_panics_doc = "allow"
# module_name_repetitions = "allow"
# must_use_candidate = "allow"
# return_self_not_must_use = "allow"
# too_many_lines = "allow"
# excessive_nesting = "allow"
# similar_names = "allow"
# unused_async = "allow"
# cast_possible_truncation = "allow"
# cast_sign_loss = "allow"
# cast_precision_loss = "allow"
# needless_pass_by_value = "allow"
# items_after_statements = "allow"
# needless_continue = "allow"
# match_same_arms = "allow"
# assigning_clones = "allow"
# uninlined_format_args = "allow"
# semicolon_if_nothing_returned = "allow"
# manual_let_else = "allow"
# cast_possible_wrap = "allow"
# needless_for_each = "allow"
# unnecessary_debug_formatting = "allow"
# match_wildcard_for_single_variants = "allow"
# struct_field_names = "allow"
# default_trait_access = "allow"
# iter_without_into_iter = "allow"
# single_match_else = "allow"
# explicit_iter_loop = "allow"
# map_unwrap_or = "allow"
# redundant_closure_for_method_calls = "allow"
# explicit_deref_methods = "allow"
# unnecessary_semicolon = "allow"
# filter_map_next = "allow"
# doc_markdown = "allow"
