[package]
name = "ra2a-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
authors = ["QNTX"]
description = "Extension utilities for the A2A Rust SDK (ra2a)"
keywords = ["a2a", "agent", "protocol", "extensions"]
categories = ["network-programming"]

[dependencies]
ra2a = { path = "../ra2a", default-features = false }
serde_json.workspace = true
tokio.workspace = true

[features]
default = ["client", "server"]
client = ["ra2a/client"]
server = ["ra2a/server"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
