[package]
name = "ra2a"
version.workspace = true
edition.workspace = true
authors = ["A2A Project"]
description = "A Rust implementation of the Agent2Agent (A2A) Protocol SDK"
license.workspace = true
repository.workspace = true
keywords = ["a2a", "agent", "protocol", "ai", "rpc"]
categories = ["network-programming", "web-programming"]

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
pin-project-lite.workspace = true
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
google-api-proto = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
mockito.workspace = true
pretty_assertions.workspace = true
tokio-test.workspace = true

[build-dependencies]
tonic-prost-build = { workspace = true, optional = true }

[features]
default = ["client", "server"]
client = []
server = ["axum", "tower", "tower-http", "http-body", "http-body-util"]
grpc = ["tonic", "prost", "prost-types", "tonic-prost", "tonic-prost-build", "google-api-proto"]
telemetry = ["opentelemetry", "tracing-opentelemetry"]
postgresql = ["sqlx", "sqlx/postgres"]
mysql = ["sqlx", "sqlx/mysql"]
sqlite = ["sqlx", "sqlx/sqlite"]
sql = ["postgresql", "mysql", "sqlite"]
full = ["server", "grpc", "telemetry", "sql"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["client"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["server"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
